--- a/Covid19/Covid19.csproj
+++ b/Covid19/Covid19.csproj
@@ -132,6 +132,12 @@
     <Compile Include="Help.Designer.cs">
       <DependentUpon>Help.cs</DependentUpon>
     </Compile>
+    <Compile Include="Diary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Diary.Designer.cs">
+      <DependentUpon>Diary.cs</DependentUpon>
+    </Compile>
     <Compile Include="Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Help.resx">
       <DependentUpon>Help.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Diary.resx">
+      <DependentUpon>Diary.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Test.resx">
       <DependentUpon>Test.cs</DependentUpon>
