--- a/Covid19/Covid19.csproj
+++ b/Covid19/Covid19.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestRes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestRes.Designer.cs">
+      <DependentUpon>TestRes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Info.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </Compile>
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestRes.resx">
+      <DependentUpon>TestRes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Info.resx">
       <DependentUpon>Info.cs</DependentUpon>
